--- a/FF/app/src/main/AndroidManifest.xml
+++ b/FF/app/src/main/AndroidManifest.xml
@@ -9,11 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoBar">
+        <activity android:name=".ZeroActivity" android:theme="@style/AppTheme.NoBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoBar">
+
+        </activity>
+        <activity android:name=".HelpActivity" android:theme="@style/AppTheme.NoBar">
         </activity>
     </application>
 
